2009-01-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Worked on on the fly
	type resolving.

2009-01-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: fixed 'Bug 456429 -
	Search and replace broken again'.

2008-12-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor/DebugValueWindow.cs:
	* MonoDevelop.SourceEditor/LanguageItemWindow.cs: TooltipWindow has been
	moved to MD.Components.

2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.mdp: All projects now require fx 3.5.

2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.mdp: Don't require a specific version of
	Mono.Addins.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* AssemblyInfo.cs: Add AssemblyInfo.cs files that are autogenerated from
	the addin manifests.

2008-12-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.addin.xml:
	* MonoDevelop.SourceEditor/SourceEditorView.cs: Added command for
	showing the expression evaluator.

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs:
	* MonoDevelop.SourceEditor/DebugValueTooltipProvider.cs: Factorized
	expression finder code.

2008-11-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/LanguageItemWindow.cs: Refactored
	ambiences/domoutputvisitor.

2008-11-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Moved command handlers
	to witget. Fixing Bug 448915 - Toggle Line Comment(s) not available
	in Alpha 2.

2008-11-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/DebugValueTooltipProvider.cs: Track api
	changes.

2008-11-25  Mike Krüger  <mkrueger@novell.com>
