@@ -1,5 +1,10 @@
 2009-01-07  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: fixed 'Bug 463881 -
+	Type navigator does not work with attributes'.
+
+2009-01-07  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.SourceEditor/SourceEditorView.cs:
 	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Worked on on the fly
 	type resolving.
